Clean Code changement de noms des variables TYPE  #54